Correction texte h1 optimisation du contraste

--- a/style.css
+++ b/style.css
@@ -284,7 +284,7 @@ a:hover {
 }
 
 #bloc-1-hero h1 {
-    font-size: 32px;
+    font-size: 35px;
 }
 
 .navbar {
@@ -775,7 +775,11 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: white!important;
+}
+
+.texte_shadow{
+    text-shadow: 1px 1px 4px black;
 }
 
 .btn-atomic-tangerine {
